--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^18.1.2",
-    "expo": "~49.0.7",
+    "expo": "^49.0.10",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
